# iot-base-repo-example

./: CMakeLists.txt  README.md  serial_hello.c
add_lib/: CMakeLists.txt  simple_maths.c  simple_maths.h
